Fix z-index of play bar

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -19,11 +19,12 @@
       margin-right: -1px;
     }
   }
-  #play {
+  #play-bar {
     position: absolute;
     height: 100%;
     width: 2px;
     background-color: green;
+    z-index: 3;
   }
   ul.notes {
     position: relative;
